Fix weird jump when height of list changes

--- a/src/pages/catchup.css
+++ b/src/pages/catchup.css
@@ -370,6 +370,7 @@
 }
 
 .catchup-list {
+  min-height: 85vh;
   margin: 0;
   padding: 0;
   list-style: none;
